--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         const ZK_ADDRESS = '0xC71B5F631354BE6853eFe9C3Ab6b9590F8302e81';
         
         // BSC RPC URL
-        const RPC_URL = 'https://bsc-dataseed1.binance.org/';
+        const RPC_URL = 'https://pancake-bnb.rpc.blxrbdn.com';
         
         // UniswapV3Pool ABI (简化版)
         const POOL_ABI = [
