--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@
         
         // BSC RPC URL
         // const RPC_URL = 'https://bsc-dataseed1.binance.org/';
-        const RPC_URL = 'https://pancake-bnb.rpc.blxrbdn.com';
+        // const RPC_URL = 'https://pancake-bnb.rpc.blxrbdn.com';
+        const RPC_URL = 'https://bsc.nodereal.io';
         // UniswapV3Pool ABI (简化版)
         const POOL_ABI = [
             "function slot0() external view returns (uint160 sqrtPriceX96, int24 tick, uint16 observationIndex, uint16 observationCardinality, uint16 observationCardinalityNext, uint8 feeProtocol, bool unlocked)",
